--- a/libal-ifc-service-472/packages.config
+++ b/libal-ifc-service-472/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ManagedEsent" version="1.9.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client.de" version="5.2.7" targetFramework="net472" />
@@ -8,6 +10,11 @@
   <package id="Microsoft.AspNet.WebApi.Core.de" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost.de" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
@@ -16,40 +23,45 @@
   <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net472" />
   <package id="NPOI" version="2.4.1" targetFramework="net472" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
-  <package id="Xbim.Cobie" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.CobieExpress" version="5.1.146" targetFramework="net472" />
-  <package id="Xbim.COBieLite" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.COBieLiteUK" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.CobieLiteUK.Validation" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.Common" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.DPoW" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.Essentials" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.Exchange" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.Exchanger" version="5.1.179" targetFramework="net472" />
-  <package id="Xbim.Geometry" version="5.1.239" targetFramework="net472" />
-  <package id="Xbim.Geometry.Engine.Interop" version="5.1.239" targetFramework="net472" />
-  <package id="Xbim.Ifc" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.Ifc2x3" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.Ifc4" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.IO.CobieExpress" version="5.1.146" targetFramework="net472" />
-  <package id="Xbim.IO.Esent" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.IO.MemoryModel" version="5.1.259" targetFramework="net472" />
-  <package id="Xbim.IO.Table" version="5.1.146" targetFramework="net472" />
-  <package id="Xbim.ModelGeometry.Scene" version="5.1.239" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="Xbim.Cobie" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.CobieExpress" version="5.1.147-develop" targetFramework="net472" />
+  <package id="Xbim.COBieLite" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.COBieLiteUK" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.CobieLiteUK.Validation" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.Common" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.DPoW" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.Essentials" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.Exchange" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.Exchanger" version="5.1.181-develop" targetFramework="net472" />
+  <package id="Xbim.Geometry" version="5.1.404-develop" targetFramework="net472" />
+  <package id="Xbim.Geometry.Engine.Interop" version="5.1.404-develop" targetFramework="net472" />
+  <package id="Xbim.Ifc" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.Ifc2x3" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.Ifc4" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.IO.CobieExpress" version="5.1.147-develop" targetFramework="net472" />
+  <package id="Xbim.IO.Esent" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.IO.MemoryModel" version="5.1.326-develop" targetFramework="net472" />
+  <package id="Xbim.IO.Table" version="5.1.147-develop" targetFramework="net472" />
+  <package id="Xbim.ModelGeometry.Scene" version="5.1.404-develop" targetFramework="net472" />
   <package id="Xbim.PropertySets" version="4.0.1" targetFramework="net472" />
-  <package id="Xbim.Tessellator" version="5.1.259" targetFramework="net472" />
+  <package id="Xbim.Tessellator" version="5.1.326-develop" targetFramework="net472" />
 </packages>
