--- a/libal-ifc-service-472/packages.config
+++ b/libal-ifc-service-472/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.Core" version="3.5.3.7" targetFramework="net472" />
+  <package id="AWSSDK.S3" version="3.5.9.7" targetFramework="net472" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
